# django-o11y

./: .dockerignore  .env  .env.example  .gitignore  .markdownlint.yml  .markdownlintignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  INTEGRATION.md  MANIFEST.in  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  manage.py  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  tox.ini  versions.json  zensical.toml
.agent/: instructions.md
.github/: release-drafter.yml
.github/workflows/: ci-cd.yml  docs.yml  release-drafter.yml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/configuration/: index.html
0.2.0/usage/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/configuration/: index.html
0.2.1/usage/: index.html
0.2.10/: 404.html  index.html  sitemap.xml
0.2.10/configuration/: index.html
0.2.10/search/: search_index.json
0.2.10/usage/: index.html
0.2.11/: 404.html  index.html  sitemap.xml
0.2.11/configuration/: index.html
0.2.11/usage/: index.html
0.2.12/: 404.html  index.html  sitemap.xml
0.2.12/configuration/: index.html
0.2.12/usage/: index.html
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/configuration/: index.html
0.2.2/usage/: index.html
0.2.3/: 404.html  index.html  sitemap.xml
0.2.3/configuration/: index.html
0.2.3/usage/: index.html
0.2.4/: 404.html  index.html  sitemap.xml
0.2.4/configuration/: index.html
0.2.4/usage/: index.html
0.2.5/: 404.html  index.html  sitemap.xml
0.2.5/configuration/: index.html
0.2.5/usage/: index.html
0.2.6/: 404.html  index.html  sitemap.xml
0.2.6/configuration/: index.html
0.2.6/usage/: index.html
0.2.7/: 404.html  index.html  sitemap.xml
0.2.7/configuration/: index.html
0.2.7/usage/: index.html
0.2.8/: 404.html  index.html  sitemap.xml
0.2.8/configuration/: index.html
0.2.8/usage/: index.html
0.2.9/: 404.html  index.html  sitemap.xml
0.2.9/configuration/: index.html
0.2.9/usage/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/configuration/: index.html
0.3.0/search/: search_index.json
0.3.0/usage/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/configuration/: index.html
0.4.0/usage/: index.html
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/configuration/: index.html
0.4.1/usage/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/configuration/: index.html
0.5.0/usage/: index.html
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/configuration/: index.html
0.5.1/search/: search_index.json
0.5.1/usage/: index.html
0.5.2/: 404.html  index.html  sitemap.xml
0.5.2/configuration/: index.html
0.5.2/usage/: index.html
0.5.3/: 404.html  index.html  sitemap.xml
0.5.3/configuration/: index.html
0.5.3/search/: search_index.json
0.5.3/usage/: index.html
0.5.4/: 404.html  index.html  sitemap.xml
0.5.4/configuration/: index.html
0.5.4/usage/: index.html
0.5.5/: 404.html  index.html  sitemap.xml
0.5.5/configuration/: index.html
0.5.5/search/: search_index.json
0.5.5/usage/: index.html
0.5.6/: 404.html  index.html  sitemap.xml
0.5.6/configuration/: index.html
0.5.6/usage/: index.html
0.5.7/: 404.html  index.html  sitemap.xml
0.5.7/configuration/: index.html
0.5.7/usage/: index.html
0.5.8/: 404.html  index.html  sitemap.xml
0.5.8/configuration/: index.html
0.5.8/usage/: index.html
0.6.0/: sitemap.xml
0.7.0/: 404.html  search.json
0.7.0/utils/: index.html
0.7.1/: index.html  search.json
0.7.1/usage/: index.html
configuration/: index.html
dev/: 404.html  index.html  search.json  sitemap.xml
dev/configuration/: index.html
dev/demo-images/: index.html
dev/javascripts/: glightbox-init.js
dev/search/: search_index.json
dev/usage/: index.html
docs/: CONFIGURATION.md  USAGE.md  configuration.md  demo-images.md  index.md  integration.md  usage.md  utils.md
search/: search_index.json
src/django_o11y/: __init__.py  apps.py  conf.py  context.py  fork.py  validation.py
src/django_o11y/celery/: __init__.py  detection.py  setup.py  signals.py
src/django_o11y/config/: __init__.py  setup.py  utils.py
src/django_o11y/instrumentation/: setup.py
src/django_o11y/logging/: celery.py  config.py  middleware.py  setup.py  signals.py  utils.py
src/django_o11y/management/: __init__.py
src/django_o11y/metrics/: __init__.py  custom.py  setup.py  utils.py
src/django_o11y/middleware/: __init__.py  tracing.py
src/django_o11y/profiling/: __init__.py  setup.py  signals.py
src/django_o11y/tracing/: fork.py  instrumentation.py  middleware.py  provider.py  pyroscope.py  setup.py  signals.py  utils.py
src/django_o11y/utils/: __init__.py  merge.py  process.py  signals.py
src/django_observability/: __init__.py  apps.py  conf.py  context.py  validation.py
src/django_observability/celery/: __init__.py  setup.py  signals.py
src/django_observability/instrumentation/: setup.py
src/django_observability/logging/: config.py  otlp_handler.py  (+1 more)
tests/: Dockerfile  __init__.py  asgi.py  celery_app.py  conftest.py  consumers.py  metrics_registry.py  models.py  settings.py  settings_dev.py  tasks.py  test_apps.py  test_celery.py  test_celery_e2e.py  test_conf.py  test_configuration.py  test_context.py  test_e2e.py  test_fork.py  test_instrumentation.py  test_management_commands.py  test_metrics.py  test_middleware.py  test_models.py  test_otlp_handler.py  test_profiling.py  test_pyroscope_correlation.py  test_tracing.py  test_validation.py  urls.py  ws_urls.py
tests/celery/: test_celery.py
tests/config/: __init__.py  test_conf.py  test_configuration.py  test_validation.py
tests/core/: test_apps.py  test_middleware.py  test_process.py
tests/integration/: test_celery_e2e.py
tests/logging/: test_channels_middleware.py  test_setup.py  test_utils.py
tests/management/: test_management_commands.py
tests/migrations/: 0001_initial.py  0002_taskresult.py
tests/profiling/: test_profiling.py
tests/tracing/: test_context.py  test_fork.py  test_instrumentation.py  test_tracing.py
usage/: index.html
(+22 files in other folders)
